--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,19 +16,19 @@ jobs:
         echo Add other actions to build,
         echo test, and deploy your project.
   test:
-    name: Test on node ${{ matrix.node_version }} and ${{ matrix.os }}
+    name: Test on node ${{ matrix.node-version }} and ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node_version: [8, 10, 12]
+        node-version: [8, 10, 12]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
     - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node_version }}
+    - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
-        version: ${{ matrix.node_version }}
+        version: ${{ matrix.node-version }}
 
     - name: npm install, build and test
       run: |
