--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node-version: [8, 10, 12]
+        node-version: [8]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
